fix: contato text spacing

--- a/arquivos/css/styles.css
+++ b/arquivos/css/styles.css
@@ -587,6 +587,11 @@ input[type="checkbox"]:checked {
   margin-bottom: 4rem;
 }
 
+.my-5{
+  margin-top: 1.25rem;
+  margin-bottom: 1.25rem;
+}
+
 .mb-4{
   margin-bottom: 1rem;
 }
@@ -625,6 +630,14 @@ input[type="checkbox"]:checked {
 
 .mb-7{
   margin-bottom: 1.75rem;
+}
+
+.mt-4{
+  margin-top: 1rem;
+}
+
+.mb-6{
+  margin-bottom: 1.5rem;
 }
 
 .block{
@@ -947,6 +960,12 @@ input[type="checkbox"]:checked {
   --tw-space-y-reverse: 0;
   margin-top: calc(1.75rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(1.75rem * var(--tw-space-y-reverse));
+}
+
+.space-y-4 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
 }
 
 .scroll-smooth{
